@@ -1,3 +1,9 @@
+2011-05-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/48159
+	* gcc.dg/pr48159-1.c: New test.
+	* gcc.dg/pr48159-2.c: New test.
+
 2011-05-11  Fabien Chêne  <fabien@gcc.gnu.org>
 
 	PR c++/48859
